# athena-language-server

./: Cargo.toml
crates/athena-language-server/: Cargo.toml
crates/base-db/: Cargo.toml
crates/base-db/src/: fixture.rs  lib.rs  resolve_path.rs  virtual_path.rs
crates/cli/: Cargo.toml
crates/hir/: Cargo.toml
crates/hir-new/: Cargo.toml
crates/hir-new/src/: ast_map.rs  body.rs  db.rs  ded.rs  dir.rs  expr.rs  fixture.rs  hir.rs  lib.rs  pat.rs  phrase.rs  sort_ref.rs  stmt_tree.rs  test_db.rs
crates/hir-new/src/body/: lower.rs
crates/hir-new/src/hir/: debug_dump.rs  ded.rs  dir.rs  expr.rs  lower.rs  name.rs  pat.rs  phrase.rs  sort_ref.rs  stmt.rs  tests.rs
crates/hir-new/src/stmt_tree/: lower.rs
crates/hir/src/: test_db.rs
crates/hir/src/file_hir/: lower.rs
crates/ide/: Cargo.toml
crates/ide-db/src/: lib.rs
crates/ide/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lexer.rs
crates/parser/src/grammar/: directives.rs  statements.rs
crates/parser/src/lexer/: generated.rs
crates/parser/src/snapshots/: parser__tests__parse_inline_err.snap  parser__tests__parse_inline_err@0088_phrase_stmt_err.ath.snap  parser__tests__parse_inline_ok@0084_phrase_stmt.ath.snap  (+7 more)
crates/sourcegen/: Cargo.toml
crates/syntax/: Cargo.toml  ast.ron  athena.ungram
crates/syntax/src/: ast.rs
crates/syntax/src/ast/: node_ext.rs  traits.rs
crates/syntax/src/snapshots/: syntax__tests__syntax_validation.snap
crates/test-utils/src/: lib.rs
crates/util/src/: macros.rs
xtask/: Cargo.toml
xtask/src/codegen/: ast.rs
(+5 files in other folders)
