[package]
name = "athena-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap.workspace = true
syntax.workspace = true
tokio = { version = "1.28.2", features = [
	"macros",
	"io-std",
	"rt",
	"rt-multi-thread",
] }
tower-lsp = "0.19.0"
ide.workspace = true
ide-db.workspace = true
paths.workspace = true
parking_lot = "0.12.1"
extend = "1.2.0"
tracing-subscriber.workspace = true
anyhow = "1.0.71"
tracing.workspace = true
tracing-tree.workspace = true
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
