[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.8.1"
rowan = "0.15.11"
smol_str = "0.2.0"
parser = { path = "../parser" }
util = { version = "0.1.0", path = "../util" }

[dev-dependencies]
itertools.workspace = true
insta.workspace = true
